// Service

//INGGIT
// 1. CreateEmployee (Employee) string
// 2. ReadEmployee (nama/id) Employee
// 3. UpdateEmployee (Employee) Employee
// 4. Delete (nama/id) string

// DIAN
// 5. Laporan (nama/id) Employee
// 6. LaporanAll (kosong) []Employee

syntax ="proto3";

package employee;
//import "google/protobuf/Empty.proto";

service HRD {
    rpc LaporanByUsername(GetEmpByUsername)returns(LaporanEmployee){}
    //rpc LaporanAllEmployee(google.protobuf.Empty)returns(ArrEmployee){}
}

message GetEmpByUsername{
    string Username =1;
}

message LaporanEmployee {
    string ID = 1;
    string Nama = 2;
    string TotalGaji = 3;
    string Status = 4;
}

message ArrEmployee{
    repeated LaporanEmployee ArrLaporan = 1;
}